--- a/examples/tilesource-iiif/index.html
+++ b/examples/tilesource-iiif/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset='utf-8'>
 
+    <link rel="shortcut icon" type="image/png" href="/images/logo16.png">
     <title>IIIF Tile Source | OpenSeadragon</title>
 
     <link rel='stylesheet' 
@@ -20,15 +21,15 @@
        alt="Fork me on GitHub" /></a>
     <div id="container">
         <div class="download">
-            <a href="https://github.com/openseadragon/openseadragon/releases/download/v2.1.0/openseadragon-bin-2.1.0.zip">
+            <a href="https://github.com/openseadragon/openseadragon/releases/download/v2.2.0/openseadragon-bin-2.2.0.zip">
                 <img border="0" width="90" src="/images/zip.png"></a>
-            <a href="https://github.com/openseadragon/openseadragon/releases/download/v2.1.0/openseadragon-bin-2.1.0.tar.gz">
+            <a href="https://github.com/openseadragon/openseadragon/releases/download/v2.2.0/openseadragon-bin-2.2.0.tar.gz">
                 <img border="0" width="90" src="/images/tar.png"></a>
         </div>
         <img class="logo" src="/images/logo.png">
         <h1>
             <a href="/">OpenSeadragon</a><span class="version">
-                2.1.0
+                2.2.0
             </span>
             <span class="tagline">
             </span>
