--- a/examples/ui-rotation/index.html
+++ b/examples/ui-rotation/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset='utf-8'>
 
+    <link rel="shortcut icon" type="image/png" href="/images/logo16.png">
     <title>Rotation | OpenSeadragon</title>
 
     <link rel='stylesheet' 
@@ -20,15 +21,15 @@
        alt="Fork me on GitHub" /></a>
     <div id="container">
         <div class="download">
-            <a href="https://github.com/openseadragon/openseadragon/releases/download/v2.1.0/openseadragon-bin-2.1.0.zip">
+            <a href="https://github.com/openseadragon/openseadragon/releases/download/v2.2.0/openseadragon-bin-2.2.0.zip">
                 <img border="0" width="90" src="/images/zip.png"></a>
-            <a href="https://github.com/openseadragon/openseadragon/releases/download/v2.1.0/openseadragon-bin-2.1.0.tar.gz">
+            <a href="https://github.com/openseadragon/openseadragon/releases/download/v2.2.0/openseadragon-bin-2.2.0.tar.gz">
                 <img border="0" width="90" src="/images/tar.png"></a>
         </div>
         <img class="logo" src="/images/logo.png">
         <h1>
             <a href="/">OpenSeadragon</a><span class="version">
-                2.1.0
+                2.2.0
             </span>
             <span class="tagline">
             </span>
@@ -133,8 +134,8 @@ OpenSeadragon({
             });
 
             $("#slider").slider({
-                min: 0,
-                max: 360,
+                min: -180,
+                max: 180,
                 slide: function(event, ui) {
                     viewer.viewport.setRotation(ui.value);
                 }
@@ -154,8 +155,8 @@ var viewer = OpenSeadragon({
 
 // Using jQuery UI slider
 $("#slider").slider({
-    min: 0,
-    max: 360,
+    min: -180,
+    max: 180,
     slide: function(event, ui) {
         viewer.viewport.setRotation(ui.value);
     }
