Updated http://alexbartl.de/panorama.html link

--- a/examples/in-the-wild/index.html
+++ b/examples/in-the-wild/index.html
@@ -59,7 +59,7 @@
         <h2>OpenSeadragon in the Wild</h2>
 <h4>Art/Photography</h4>
 <ul class="square-list">
-    <li><a href="http://alexbartl.de/alex/panorama.html">Alexander Bartl: Panoramas</a></li>
+    <li><a href="http://alexbartl.de/panorama.html">Alexander Bartl: Panoramas</a></li>
     <li>
         <a href="https://www.artsy.net/">Artsy</a>
         <ul>
