--- a/examples/in-the-wild/index.html
+++ b/examples/in-the-wild/index.html
@@ -281,6 +281,7 @@
 </ul>
 <h4>Storytelling/Media</h4>
 <ul class="square-list">
+    <li><a href="http://labs.statsbiblioteket.dk/zoom/">A million pages in one</a></li>
     <li><a href="http://www.bbc.com/news/world-us-canada-22661624">BBC: Oklahoma tornado, survivors' tales from eye of the storm</a></li>
     <li>
         <a href="http://epaper.e-dicola.net/epaper">E-Dicola Magazine Viewer</a>
@@ -293,9 +294,9 @@
     <li><a href="http://www.madrona.com/seattle-tech-universe-poster/">Seattle Tech Universe</a></li>
     <li><a href="http://amhistory.si.edu/starspangledbanner/interactive-flag-html5/">The Star-Spangled Banner, Smithsonian</a></li>
     <li><a href="http://twittercensus.se/graph2014/graphwalk14.php">Swedish Twitter Census, 2014</a></li>
-    <li><a href="http://dump.ventero.de/xkcd1110/open.html">xkcd #1110 remixed with OpenSeadragon</a></li>
     <li><a href="http://www.vam.ac.uk/content/articles/i/exhibition-road-drawing-scroll/">
 Victoria and Albert Museum: Exhibition Road drawing scroll</a> (<a href="http://www.vam.ac.uk/blog/digital-media/building-the-deepzoom">more info</a>)</li>
+    <li><a href="http://dump.ventero.de/xkcd1110/open.html">xkcd #1110 remixed with OpenSeadragon</a></li>
 </ul>
 <h4>Tools</h4>
 <ul class="square-list">
