--- a/examples/in-the-wild/index.html
+++ b/examples/in-the-wild/index.html
@@ -259,9 +259,9 @@
         </ul>
     </li>
     <li>
-        <a href="http://siphonophore.org/microdraw/">MicroDraw: Collaborative Annotation</a>
+        <a href="http://microdraw.pasteur.fr/">MicroDraw: Collaborative Annotation</a>
         <ul>
-            <li>e.g. <a href="http://siphonophore.org/microdraw/microdraw.html?source=bigbrain/bigbrain.json">BigBrain human brain slice</a></li>
+            <li>e.g. <a href="http://microdraw.pasteur.fr/microdraw.html?source=/bigbrain/bigbrain.json">BigBrain human brain slice</a></li>
         </ul>
     </li>
     <li>
