--- a/examples/in-the-wild/index.html
+++ b/examples/in-the-wild/index.html
@@ -294,8 +294,8 @@
     <li><a href="http://www.madrona.com/seattle-tech-universe-poster/">Seattle Tech Universe</a></li>
     <li><a href="http://amhistory.si.edu/starspangledbanner/interactive-flag-html5/">The Star-Spangled Banner, Smithsonian</a></li>
     <li><a href="http://twittercensus.se/graph2014/graphwalk14.php">Swedish Twitter Census, 2014</a></li>
-    <li><a href="http://www.vam.ac.uk/content/articles/i/exhibition-road-drawing-scroll/">
-Victoria and Albert Museum: Exhibition Road drawing scroll</a> (<a href="http://www.vam.ac.uk/blog/digital-media/building-the-deepzoom">more info</a>)</li>
+    <li><a href="http://www.vam.ac.uk/content/articles/i/exhibition-road-drawing-scroll/">Victoria and Albert Museum: Exhibition Road drawing scroll</a> (<a href="http://www.vam.ac.uk/blog/digital-media/building-the-deepzoom">more info</a>)</li>
+    <li><a href="http://rosphoto.org/interactive-museum/dmitrii-donskoi/app/ship/index-en.html">The Voyage on the Cruiser Dmitrii Donskoi, ROSPHOTO</a> (<a href="http://rosphoto.org/collection-en/virtual-museum/the-voyage-on-the-cruiser-dmitrii-donskoi/">more info</a>)</li>
     <li><a href="http://dump.ventero.de/xkcd1110/open.html">xkcd #1110 remixed with OpenSeadragon</a></li>
 </ul>
 <h4>Tools</h4>
