Updated Feisty Photon

--- a/examples/in-the-wild/index.html
+++ b/examples/in-the-wild/index.html
@@ -250,6 +250,7 @@
         <a href="http://feistyphoton.org/">Feisty Photon - Astrophotography by Darryn Lavery</a>
         <ul>
             <li>e.g. <a href="http://feistyphoton.org/project/carinatour/">A Tour Around the Carina Nebula</a></li>
+            <li>(<a href="https://github.com/DarrynLavery/astro-image-viewer/">source code</a>)</li>
         </ul>
     </li>
     <li>
