--- a/openseadragonizer/index.html
+++ b/openseadragonizer/index.html
@@ -18,6 +18,12 @@
                 Powered by <a href="http://openseadragon.github.io">OpenSeadragon</a>
             </span>
         </div>
+        <div id="loading-popup">
+            <span id="loading-message">
+                <img src="loading.svg" alt="loading" height="27">
+                <span>Image loading...</span>
+            </span>
+        </div>
 
         <script src='openseadragon/openseadragon.min.js'></script>
         <script src="index.js"></script>
