--- a/index.html
+++ b/index.html
@@ -261,19 +261,30 @@
 <a name="installing"></a>
 <h2 id='download'>Download &amp; Install</h2>
 <p>
-    You can download OpenSeadragon 2.2.1 in
+  You can get OpenSeadragon 2.2.1 through any of these venues:
+</p>
+<ul class="square-list">
+  <li>
+    <strong>Download:</strong>
     <a href="https://github.com/openseadragon/openseadragon/releases/download/v2.2.1/openseadragon-bin-2.2.1.zip">zip</a> or
-    <a href="https://github.com/openseadragon/openseadragon/releases/download/v2.2.1/openseadragon-bin-2.2.1.tar.gz">tar.gz</a> formats.
-</p>
-<p>
-    You can also use <a href="http://bower.io">Bower</a> (<tt>bower install openseadragon</tt>) or <a href="https://www.npmjs.com/package/openseadragon">npm</a> (<tt>npm install openseadragon</tt>).
-</p>
+    <a href="https://github.com/openseadragon/openseadragon/releases/download/v2.2.1/openseadragon-bin-2.2.1.tar.gz">tar.gz</a>
+  </li>
+  <li>
+    <strong>Bower:</strong> <tt>bower install openseadragon</tt>
+  </li>
+  <li>
+    <strong>npm:</strong> <tt>npm install openseadragon</tt> (<a href="https://www.npmjs.com/package/openseadragon">link</a>)
+  </li>
+  <li>
+    <strong>jsDelivr (CDN):</strong> <a href="https://cdn.jsdelivr.net/npm/openseadragon@2.2/build/openseadragon/openseadragon.min.js">code</a> and <a href="https://cdn.jsdelivr.net/npm/openseadragon@2.2/build/openseadragon/images/">images</a>
+  </li>
+</ul>
 <p>
     For installation instructions, see the <a href="/docs/">Getting Started</a> page in the documentation.
 </p>
 <p>
     For creating the tiles themselves, see <a href="/examples/creating-zooming-images/">Creating Zooming Images</a>.
-</p> 
+</p>
 <p>
     Older releases and source archives are
     <a href="https://github.com/openseadragon/openseadragon/releases">
