--- a/index.html
+++ b/index.html
@@ -273,10 +273,13 @@
     <strong>Bower:</strong> <tt>bower install openseadragon</tt>
   </li>
   <li>
-    <strong>npm:</strong> <tt>npm install openseadragon</tt> (<a href="https://www.npmjs.com/package/openseadragon">link</a>)
+    <strong>npm:</strong> <tt>npm install openseadragon</tt> (<a href="https://www.npmjs.com/package/openseadragon">info</a>)
   </li>
   <li>
     <strong>jsDelivr (CDN):</strong> <a href="https://cdn.jsdelivr.net/npm/openseadragon@2.2/build/openseadragon/openseadragon.min.js">code</a> and <a href="https://cdn.jsdelivr.net/npm/openseadragon@2.2/build/openseadragon/images/">images</a>
+  </li>
+  <li>
+    <strong>CDNJS (CDN):</strong> <a href="https://cdnjs.cloudflare.com/ajax/libs/openseadragon/2.2.1/openseadragon.min.js">code</a> and <a href="https://cdnjs.cloudflare.com/ajax/libs/openseadragon/2.2.1/images/">images</a> (<a href="https://cdnjs.com/libraries/openseadragon">info</a>)
   </li>
 </ul>
 <p>
