--- a/examples/creating-zooming-images/index.html
+++ b/examples/creating-zooming-images/index.html
@@ -21,15 +21,15 @@
        alt="Fork me on GitHub" /></a>
     <div id="container">
         <div class="download">
-            <a href="https://github.com/openseadragon/openseadragon/releases/download/v2.2.1/openseadragon-bin-2.2.1.zip">
+            <a href="https://github.com/openseadragon/openseadragon/releases/download/v2.3.0/openseadragon-bin-2.3.0.zip">
                 <img border="0" width="90" src="/images/zip.png"></a>
-            <a href="https://github.com/openseadragon/openseadragon/releases/download/v2.2.1/openseadragon-bin-2.2.1.tar.gz">
+            <a href="https://github.com/openseadragon/openseadragon/releases/download/v2.3.0/openseadragon-bin-2.3.0.tar.gz">
                 <img border="0" width="90" src="/images/tar.png"></a>
         </div>
         <img class="logo" src="/images/logo.png">
         <h1>
             <a href="/">OpenSeadragon</a><span class="version">
-                2.2.1
+                2.3.0
             </span>
             <span class="tagline">
             </span>
@@ -157,6 +157,26 @@
         <td>
             <a href="/examples/tilesource-iiif/">IIIF</a> (requires a IIIF-compliant image server with JPEG 2000 support, like <a href="https://github.com/pulibrary/loris">Loris</a>; see also <a href="http://iiif.io">iiif.io</a> for more details)
         </td>
+    </tr>
+    <tr>
+        <td><a href="https://sourceforge.net/projects/zoomifyimage/">Zoomify Image</a></td>
+        <td>Python</td>
+        <td><a href="/examples/tilesource-zoomify/">Zoomify</a></td>
+    </tr>
+    <tr>
+        <td><a href="http://www.zoomify.com/free.htm">Zoomify App</a></td>
+        <td>Free proprietary desktop app for Windows and Mac</td>
+        <td><a href="/examples/tilesource-zoomify/">Zoomify</a></td>
+    </tr>
+    <tr>
+        <td><a href="http://www.zoomify.com/photoshop.htm">Zoomify Plugin</a></td>
+        <td>Free proprietary export plugin for Photoshop</td>
+        <td><a href="/examples/tilesource-zoomify/">Zoomify</a></td>
+    </tr>
+    <tr>
+        <td><a href="https://packagist.org/packages/daniel-km/zoomify">Zoomify Library</a></td>
+        <td>PHP, free standalone script or integrated in the open source digital library <a href="https://omeka.org/s">Omeka S</a> via the module <a href="https://github.com/Daniel-KM/Omeka-S-module-IiifServer">IIIF Server</a></td>
+        <td><a href="/examples/tilesource-zoomify/">Zoomify</a></td>
     </tr>
     <tr>
         <td><a href="https://github.com/usnistgov/pyramidio">PyramidIO</a></td>
