--- a/examples/in-the-wild/index.html
+++ b/examples/in-the-wild/index.html
@@ -307,6 +307,7 @@
 <h4><a name="science"></a>Scientific</h4>
 <ul class="square-list">
     <li><a href="http://www.allencell.org/deep-cell-zoom.html">Allen Cell Explorer</a></li>
+    <li><a href="https://www.doc.ic.ac.uk/~dmcginn/adjmat.html">Bitcoin Blockchain Explorer</a></li>
     <li><a href="http://cancer.digitalslidearchive.net/">Cancer Digital Slide Archive</a></li>
     <li>
         <a href="http://feistyphoton.org/">Feisty Photon - Astrophotography by Darryn Lavery</a>
