--- a/examples/in-the-wild/index.html
+++ b/examples/in-the-wild/index.html
@@ -266,6 +266,14 @@
             <li>e.g. <a href="http://www.rare-atlases.com/atlases/18th-century-atlases/1718-atlas-of-friesland-by-schotanus?atlas=1718-atlas-of-friesland-by-schotanus&map=1718_schotanus_friesland_050&view=zoomall&atlasid=11&tmpl=component">Atlas of Friesland by Schotanus, 1718</a></li>
         </ul>
     </li>
+    <li><a href="http://infoforest.vis.uky.edu">The St. Chad Gospels Registered Image Viewer</a></li>
+    <li>
+        <a href="https://wellcomecollection.org/works">Wellcome Collection</a>
+        <ul>
+            <li>e.g. <a href="https://wellcomecollection.org/works/a3gvp92j">A Chinese boatwoman by John Thomson</a></li>
+            <li>e.g. <a href="https://wellcomecollection.org/works/nvexu4hd">MS Panjabi 255, folio 186 verso</a></li>
+        </ul>
+    </li>
     <li>
         <a href="http://www.wdl.org/">World Digital Library</a>
         <ul>
@@ -279,7 +287,6 @@
             <li>e.g. <a href="https://digital.library.yorku.ca/yul-100447/cne-sports">Waterskiing in a pyramid formation, 1970</a></li>
         </ul>
     </li>
-    <li><a href="http://infoforest.vis.uky.edu">The St. Chad Gospels Registered Image Viewer</a></li>
 </ul>
 <h4><a name="mapping"></a>Mapping</h4>
 <ul class="square-list">
