Web wall whispers.

--- a/examples/in-the-wild/index.html
+++ b/examples/in-the-wild/index.html
@@ -164,6 +164,9 @@
             <li>e.g. <a href="https://www.sfmoma.org/artwork/98.27">Flatland River, Wayne Thiebaud, 1997 </a></li>
         </ul>
     </li>
+    <li>
+        <a href="https://www.webwallwhispers.net/">Fondazione Spinola-Banna: Web Wall Whispers</a>
+    </li>
 <!-- artist no longer appears to be using OSD on her site
     <li>
         <a href="http://shop.sarahha.com/">Sarah Ha Jewelry</a>
