New "In-the-Wild"

--- a/examples/in-the-wild/index.html
+++ b/examples/in-the-wild/index.html
@@ -180,6 +180,12 @@
 <ul class="square-list">
     <li><a href="http://arkyves.org/view/essay0014/">Arkyves</a></li>
     <li>
+        <a href="http://beta.biblissima.fr/en">Biblissima portal (medieval manuscripts and early printed books)</a>
+        <ul>
+            <li>e.g. an illumination from a manuscript <a href="http://beta.biblissima.fr/en/ark:/43093/ifdata68b8958d6efb2c5b0d9e670d185dcd38a01b1f57">Égypte: Alexandrie (Paris, BnF, Latin 4802 f.136)</a></li>
+        </ul>
+    </li>
+    <li>
         <a href="http://deepzoomchattanooga.com/">Deep Zoom Chattanooga</a>
         <ul>
             <li>e.g. <a href="http://deepzoomchattanooga.com/1907_market.php">Market Street, 1907</a></li>
