updated zoomable entry (API available), added new site: zoomo.ca

--- a/examples/creating-zooming-images/index.html
+++ b/examples/creating-zooming-images/index.html
@@ -147,7 +147,7 @@
     </tr>
     <tr>
         <td><a href="http://zoomable.ca/">Zoomable</a></td>
-        <td>service, offers embeds; no explicit API</td>
+        <td>service, offers embeds; <a href="http://zoomable.ca/api.html">API available</a></td>
         <td><a href="/examples/tilesource-dzi/">DZI</a></td>
     </tr>
     <tr>
@@ -155,6 +155,11 @@
         <td>service, under construction</td>
         <td><a href="/examples/tilesource-dzi/">DZI</a></td>
     </tr>
+    <tr>
+        <td><a href="http://zoomo.ca/">Zoomo</a></td>
+        <td>service (Image Sharing Website), offers embeds</td>
+        <td><a href="/examples/tilesource-dzi/">DZI</a></td>
+    </tr>    
     <tr>
         <td colspan="3"><h4>IIIF</h4></td>
     </tr>
